1999-07-07  Harlan Stenn  <stenn@whimsy.udel.edu>

	* include/ntp_machine.h (HAVE_TERMIOS): STREAMS does not imply
	HAVE_TERMIOS !!!
	* include/parse.h (timercmp): Macro defined if needed.
	* ntpd/ntp_config.c (SIGCHLD): Macro defined as SIGCLD if needed.
	(sys/wait.h): File included only if HAVE_SYS_WAIT_H.
	* configure.in (sys/wait.h): File added to AC_CHECK_HEADERS list.
	From: Philippe De Muyter  <phdm@macqel.be>

1999-06-23  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_irig.c (irig_debug): NetBSD patches
	From: Frederick Bruckman <fb@enteract.com>

	* util/ntptime.c (main): ntx.freq bugfix (-f option)
	From: Frederick Bruckman <fb@enteract.com>

1999-06-22  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Fix typo with DECL_H_ERRNO test

	* ntpd/ntp_loopfilter.c: Lose syscall decl, it's handled in
	l_stdlib.h now.
	* ntpd/ntp_request.c: Ditto
	* util/ntptime.c: Ditto

Mon May 31 18:49:49 1999  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* ntpd/ntp_proto.c (proto_config): Don't set sys_bclient on
	PROTO_MULTICAST_ADD, only caller can decide; remove wrong set on
	PROTO_MULTICAST_DEL.

Mon May 31 18:49:49 1999  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* ntpd/refclock_parse.c (stream_receive): Cast size_t to int to
	match format.
	(local_receive): Likewise.
	(trimbletaip_event): Likewise.
	(stream_receive): Cast struct timeval members to long to match
	format.
	(local_receive): Likewise.

	* ntpd/ntp_util.c (stats_config): Cast size_t to int to match
	format.

	* libparse/clk_rawdcf.c (cvt_rawdcf): Cast ptr difference to int
	to match format.
	* ntpd/refclock_parse.c (gps16x_poll): Likewise.

	* ntpd/ntp_filegen.c (filegen_open): Use long format, cast arg to
	match. 

	* ntpd/refclock_parse.c (list_err): Use long format to match arg.
	(parse_statistics): Likewise.
	(gps16x_message): Likewise.
	(cvt_ts): Use long format, cast args to match.
	(parse_start): Add missing arg.
	(gps16x_message): Swap args to match format.
