@@ -28,7 +28,7 @@ Monitoring Commands</H4>
 <TT>statistics <I>name</I> [...]</TT></DT>
 
 <DD>
-Enables writing of statistics records. Currently, three kinds of <I><TT>name</TT></I>
+Enables writing of statistics records. Currently, four kinds of <I><TT>name</TT></I>
 statistics are supported.</DD>
 
 <DD>
